kube/n8n/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
spec:
  rules:
  - host: n8n.apps.alomalab.internal
    http:
      paths:
      - backend:
          service:
            name: n8n
            port:
              number: 5678
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
